--- a/src/styles.scss
+++ b/src/styles.scss
@@ -245,6 +245,10 @@ body {
       }
       .Skills {
         margin-top: 50px;
+        input, select, textarea{
+          // box-shadow: #959da533 0px 2px 6px;
+          border:1px solid #eee !important;
+        }
         .softSkill {
           display: flex;
           border: 1px solid #dfdfdf;
