--- a/src/styles.scss
+++ b/src/styles.scss
@@ -319,6 +319,7 @@ body {
         }
         .notifier-body {
           height: auto;
+          cursor: pointer;
           .title {
             font-size: 14px;
             font-weight: 600;
