--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ body {
   font-family: "Averta Std", sans-serif;
   font-size: 14px !important;
   color: $text-color;
+  overflow-x: hidden;
 
   input,
   select,
@@ -294,11 +295,6 @@ body {
         margin-top: 50px;
         .linkField {
           margin: 10px 0;
-          .card-body {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-          }
           a {
             color: $secondary-color;
             overflow: hidden;
@@ -492,8 +488,6 @@ body {
           max-width: 450px;
           margin-right: 20px;
           width: 100%;
-          @media screen {
-          }
           .heading {
             font-size: 16px;
             font-weight: 600;
@@ -546,6 +540,20 @@ body {
 
   // Admin
   .Admin {
+    .StudentList-Table{
+      @media(max-width: 768px){
+        display: none;
+      }
+    }
+    .view-unavailable{
+      text-align: center;
+      color: $secondary-color;
+      font-size: 16px;
+      display: none;
+      @media (max-width: 768px) {
+        display: block;
+      }
+    }
     .card {
       cursor: pointer;
       transition: 0.3s ease-in-out;
