--- a/src/styles.scss
+++ b/src/styles.scss
@@ -371,13 +371,14 @@ body {
         padding: 10px;
         margin-top: 20px;
         .list-group-item {
+          color: $secondary-color;
+          margin: 10px;
+          border: none;
+          font-weight: 600;
           .externalicon {
             color: $primary-color;
             margin-left: 10px;
           }
-          margin: 10px;
-          border: none;
-          color: $secondary-color;
           a {
             text-decoration: none;
             color: $secondary-color;
