--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,9 +95,17 @@ body {
     background-color: #fff;
     color: $text-color;
   }
+
+  .TPC_Team {
+    .card {
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      margin: 20px;
+    }
+  }
+
   .Home {
     min-height: 100vh;
-    height: 100%;  
+    height: 100%;
     .right-side {
       display: flex;
       justify-content: center;
@@ -183,6 +191,11 @@ body {
     color: $secondary-color;
     text-align: center !important;
     width: 100% !important;
+    a {
+      text-decoration: none !important;
+      color: $primary-color !important;
+      font-weight: bold !important;
+    }
   }
   .Dashboard {
     min-height: 100vh;
@@ -328,7 +341,6 @@ body {
         min-height: 80px;
         border-radius: 10px;
         border: 1px solid #c8c8c8;
-        margin: 20px 0;
         // flex-wrap: nowrap;
         // box-shadow: #959da533 0px 8px 24px;
         .notifier-typo {
