--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,9 +97,26 @@ body {
   }
 
   .TPC_Team {
+    background-color: #e3e4e4;
     .card {
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-      margin: 20px;
+      margin: 30px;
+      border-radius: 0px;
+      p{
+        margin:5px;
+        color: $secondary-color;
+      }
+      .heading {
+        font-size: 16px;
+        font-weight: bold;
+        font-size: 30px;
+        color: $primary-color;
+      }
+      .sub-heading {
+        font-size: 14px;
+        font-weight: bold;
+        color: $secondary-color;
+      }
     }
   }
 
