--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,8 +102,8 @@ body {
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       margin: 30px;
       border-radius: 0px;
-      p{
-        margin:5px;
+      p {
+        margin: 5px;
         color: $secondary-color;
       }
       .heading {
@@ -208,6 +208,11 @@ body {
     color: $secondary-color;
     text-align: center !important;
     width: 100% !important;
+    p {
+      @media (max-width: 576px) {
+        font-size: 12px;
+      }
+    }
     a {
       text-decoration: none !important;
       color: $primary-color !important;
